--- a/message box/css/material-dashboard.css
+++ b/message box/css/material-dashboard.css
@@ -222,7 +222,7 @@ Copyright (c) 2015 Daniel Eden
 .sidebar .sidebar-wrapper,
 .off-canvas-sidebar .sidebar-wrapper {
   position: relative;
-  height: calc(100vh - 75px);
+  height: 100%;
   overflow: auto;
   width: 260px;
   z-index: 4;
