--- a/message box/css/style.css
+++ b/message box/css/style.css
@@ -821,3 +821,146 @@ ul.cart-list > li.total > .btn:focus{
 .mainContent {
 
 }
+
+.pageName {
+    font-family: "Roboto";
+    font-weight: lighter;
+    text-align: center;
+}
+
+.pageList {
+    position: relative;
+   border-radius: 10px;
+  background-color: rgb(255, 254, 254);
+  box-shadow: 0px 14px 18px 0px rgba(75, 77, 81, 0.14);
+  margin: 10px auto;
+  width: 100%;
+  height: 182px;
+ 
+}
+.pageList p{
+    
+}
+.pageList img{
+    border-radius: 10px;
+  background-color: rgb(220, 220, 220);
+  position: absolute;
+  top: -40px;
+  width: 90px;
+  height: 90px;
+    
+  
+}
+.likeIcon{
+    margin-top: 70px;
+    color: #42B72A;
+    font-family: "Roboto";
+    font-weight: bolder;
+    font-size: 1.5em;
+    text-align: center;
+    line-height:30px;
+}
+.pageList h4{
+    font-family: "Roboto";
+    font-weight: lighter;
+    padding: 5px;
+    text-align: center;
+}
+.pageList .goBtn{
+   background-color: rgb(64, 128, 255);
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 49px;
+    border-radius: 0px 0px 10px 10px;
+ text-align: center;
+    font-family: "Roboto";
+    color:white;
+    font-size: 1.5em;
+    text-decoration: none;
+    outline: none;
+    padding:10px;
+   transition: all 0.5s ease 0s;
+}
+.goBtn:hover{
+    background-color:#386fda;
+}
+
+
+.pageList p{
+    overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   line-height: 20px;     /* fallback */
+   max-height: 60px;      /* fallback */
+
+   -webkit-line-clamp: 3; /* number of lines to show */
+   -webkit-box-orient: vertical;
+}
+
+
+.pageListSec {
+    padding-top: 40px;
+}
+
+
+.colorRed {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #F44336;
+    border-radius: 50%;
+    
+    
+}
+
+.colorGreen {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #4CAF50;
+    border-radius: 50%;
+    transition: all 0.5s ease 0s;
+}
+.colorBlue {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #FA3E3E;
+    border-radius: 50%;
+    transition: all 0.5s ease 0s;
+}
+.colorSky {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #00BCD4;
+    border-radius: 50%;
+    transition: all 0.5s ease 0s;
+}
+.colorFb {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #366DDA;
+    border-radius: 50%;
+    transition: all 0.5s ease 0s;
+}
+.colorPurple {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #9C27B0;
+    border-radius: 50%;
+    transition: all 0.5s ease 0s;
+}
+.colors{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding:15px 40px;
+    
+}
+.c:hover{
+    border:3px solid #EEEEEE;
+}
